--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@
 }
 
 .navbar {
+  position: sticky;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px 40px;
-  background-color: #f8f6f4;
+  background-color: #fffbeb;
+  z-index: 1000;
+  top: 0;
 }
 
 .logo {
@@ -115,11 +118,12 @@
 }
 .cta-btn {
   padding: 12px 25px;
-  background: #0d5d66;
+  background: #496695;
   color: white;
   border: none;
   border-radius: 6px;
   cursor: pointer;
+  font-size: 18px;
 }
 
 /* Modal background */
@@ -174,4 +178,88 @@
   color: white;
   border: none;
   margin-top: 10px;
+}
+.details-sec{
+  background-color: #ffff;
+  display: flex;
+  justify-content: space-between;
+  background-size: cover;
+  background-position: center;
+  padding: 60px 40px;
+  border-bottom-left-radius: 100px;
+}
+.details {
+  position: relative;
+  flex: 1;
+  text-align: center;
+  padding: 20px;
+}
+
+/* vertical divider lines */
+.details:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 20%;
+  height: 60%;
+  width: 1px;
+  background: rgba(10, 10, 10, 0.3);
+}
+
+.details h2 {
+  font-size: 42px;
+  margin-bottom: 8px;
+}
+
+.details p {
+  font-size: 15px;
+  opacity: 0.85;
+}
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  padding: 40px;
+}
+
+.card {
+  height: 280px;
+  background-size: cover;
+  background-position: center;
+  border-bottom-left-radius: 30px;
+  border-top-right-radius: 40px;
+  overflow: hidden;
+  position: relative;
+  transition: transform 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-6px);
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(to top, rgba(0,0,0,0.75), rgba(0,0,0,0.2));
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 20px;
+  color: white;
+}
+
+.overlay h3 {
+  font-size: 30px;
+  margin-bottom: 6px;
+}
+
+.overlay p {
+  font-size: 14px;
+  opacity: 0.9;
+}
+
+.more-info {
+  background-color: #ffff;
+  padding: 40px;
+  text-align: center;
 }
