--- a/style.css
+++ b/style.css
@@ -79,14 +79,14 @@
     flex-direction: column;
     background: #111;
     position: absolute;
-    top: 60px;
+    top: 65px;
     right: 0;
     width: 100%;
     text-align: center;
   }
 
   .nav-links.show {
-    display: flex;
+    transform: translateX(0);
   }
 }
 
@@ -96,8 +96,9 @@
 
 .search-container input[type=text] {
   padding: 6px;
-  border: 1px solid #7f7c7c;
-  border-radius: 4px;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  background-color: #fff;
 }
 
 .hero {
@@ -337,14 +338,6 @@ footer{
 
 .text-area p {
   color: #040400;
-  
-
+  font-size: 1.25rem;}
 .text-area button {
-  background: #496695;
-  color: white;
-  border: none;
-  padding: 12px 28px;
-  border-radius: 20px;
-  cursor: pointer;
-}
-
+ background-color: #edbf18;}
