--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@
 
 .search-container input[type=text] {
   padding: 6px;
-  border: 1px solid #fff;
+  border: 1px solid #000;
   border-radius: 20px;
   background-color: #fff;
 }
@@ -388,7 +388,7 @@ footer{
 .service-item span {
   font-size: 1.4rem;
   font-weight: bold;
-  color: #caa45a;
+  color: #ffb347;
   min-width: 50px;
 }
 
@@ -408,7 +408,7 @@ footer{
 }
 
 .service-item:hover h3 {
-  color: #caa45a;
+  color: #ffb347;
 }
 
 /* Mobile friendly */
@@ -493,7 +493,7 @@ footer{
 }
 
 .member-info span {
-  color: #caa45a;
+  color: #ffb347;
   font-size: 0.9rem;
 }
 
